# msc-thesis

./: .gitignore  .gitmodules  Makefile.am  Makefile.common  Makefile.latex  README.md  autogen.sh  configure.ac
benchmarks/: .gitignore  Makefile.am  all.json  benchlib.py  benchmarks.sh  benchmarks.txt  clinfo.py  config.py  createOpenCLHost.py  e1  e10  e11  e12  e13  e14  e14_tree.py  e2  e3  e4  e5  e6  e7  e8  e9  eval_e14  gitfs.py  hw.json  hwinfo.py  i-all.json  i-test.json  i-training.json  instcounts.json  jsoncache.py  make  make.sh  mandelbrot  map  mkdat  ml.py  o-all.json  (+17 more)
benchmarks/dat/: vectorsizes-128int-cl-fast-relaxed-math.csv  vectorsizes-128int-cl-finite-math-only.csv  vectorsizes-128int-cl-mad-enable.csv  (+67 more)
benchmarks/src/: .gitignore  Makefile.am  Makefile.benchmarks  mandelbrot.cc  map.cc  testmap.cc
benchmarks/src/CannyEdgeDetection/: Makefile.am  main.cpp  run.sh
benchmarks/src/DotProduct/: main.cpp  run.sh
benchmarks/src/FiniteDifferenceTimeDomain/: Makefile.am  Simulation.cpp  Simulation.h
benchmarks/src/GameOfLife/: Makefile.am  gameoflife.cl  main.cpp  run.sh
benchmarks/src/GaussianBlur/: .gitignore  Makefile.am  main.cpp  run.sh
benchmarks/src/HeatSimulation/: Makefile.am  main.cpp
benchmarks/src/MandelbrotSet/: .gitignore  Makefile.am  main.cpp  run.sh
benchmarks/src/MatrixMultiply/: run.sh
benchmarks/src/SAXPY/: Makefile.am  main.cpp  run.sh
benchmarks/src/include/: testlib.sh
data/: .gitignore
docs/: .gitignore  AutoPar.md  Benchmarks.md  Experiment.md  Log.md  Makefile.am  ReadingLog.md  SkelCL.md  TunableKnobs.md
docs/maths/: .gitignore  Makefile.am  _notes.tex  notes.tex
docs/proposal/: .gitignore  Makefile.am  _proposal-post.tex  _proposal.tex  abstract.tex  cover.tex  inside-cover.tex  proposal.tex  refs.bib
docs/proposal/fig/: autotuners.tex  dac.tex  gantt.tex  method.tex
docs/proposal/sec/: background.tex  conclusion.tex  evaluation.tex  introduction.tex  methodology.tex  motivation.tex  work-plan.tex
docs/proposal/subfig/: autotuner-offline.tex  autotuner-online.tex  dac-in.tex  dac-pardepth.tex  skelcl-autotune.tex  skelcl.tex
docs/summary/: .gitignore  Makefile.am  _summary.tex  summary.tex
exercises/: .gitignore  Makefile.am
exercises/algos/: .gitignore  Makefile.am  matrix-multiplication.py  skel-n-queens.cc
exercises/dac/: dac.cc
exercises/expert_c/: .gitignore  Makefile
exercises/llvm/MemoryCounter/: .gitignore  runtest  test.cpp
exercises/ml/: pca.py
exercises/mpi/: .gitignore  Makefile  Makefile.am  hello.cpp  pi.cpp
exercises/opencl/: .gitignore  Makefile.am  common.h  hello.cc  hello.cl  hello.h  info.cc  integrate_eom_kernel.cl  opencl_error.h  opencl_info.cc  plasma_disk.cc  print_info.h
exercises/skelcl/: .gitignore  Makefile.am  dot_product.cc  map.cc  map_reduce.cc  stencil.cc  stencil.cl
exercises/tbb/: .gitignore  Board.h  Evolution.cc  Evolution.h  Form1.h  Makefile.am  Update_state.cc  game_of_life.cc  quicksort.cc
exercises/templates/: .gitignore  Makefile.am  benchmark.sh  dac-float.cc  dac-int.cc  dac.cc  dac.h  dc-merge-sort.cc  dc-merge-sort.h  dc.h  debug.h  fddc-merge-sort.cc  fddc-merge-sort.h  fddc.h  lib-sort.cc  list.cc  list.h  merge-sort.cc  merge-sort.h  stack.cpp  stack.h  std-stable-sort-list-int.cc  std-stable-sort-vector-int.cc  test.cc  timer.cc  timer.h  vector.h
exercises/templates/dac/: .gitignore  Makefile.am  benchmark-n-threads.sh  benchmark-reduce.sh  benchmark.sh  debug.h  fddc.h  ita-merge-sort-int.cc  ita-merge-sort.h  merge-sort-float.cc  merge-sort-int.cc  merge-sort.h  nbits.h  range.h  skel-dac-merge-sort-int.cc  skel-dac-merge-sort.h  skel-max-subarray.cc  skel-max-subarray.h  skel-merge-sort-int.cc  skel-merge-sort.h  skel.h  std-stable-sort-int.cc  test-skel-merge-sort-int.cc  test.cc  test.h  timer.cc  timer.h  vector.h
exercises/templates/dac/results/: 14.09.26-15.47.20  14.09.29-11.53.00  14.09.29-13.07.59  14.09.29-16.24.00  data  graph.py
experiments/: Makefile.am
experiments/20141105-skel-opt-space/: .gitignore  Makefile.am  char-n3.txt  char-n4.txt  char-n5.txt  char-n6.txt  char.cc  char.txt  debug.h  double-n3.txt  double-n4.txt  double-n5.txt  double-n6.txt  double.cc  double.txt  experiment.py  float-n3.txt  float-n4.txt  float-n5.txt  float-n6.txt  float.cc  float.txt  graph-results.py  int-n3.txt  int-n4.txt  int-n5.txt  int-n6.txt  int.cc  int.txt  nbits.h  range.h  skel-merge-sort.h  skel.h  test.cc  test.h  vector.h
experiments/20141120-stable-sort/: .gitignore  Makefile.am  experiment.py  stable_sort  stable_sort.cc
proposal/: .gitignore  Makefile.am  _proposal-post.tex  _proposal.tex  cover.tex  plan.tex  preamble.tex  proposal.tex  ref.bib  ref.tex
scraps/: Makefile.am
scraps/05-20/: .gitignore  Makefile.am  common.cc  common.h  mandelbrot_opencl.cc  mandelbrot_seq.cc  mandelbrot_skelcl.cc  mandelbrot_skelcl.h
scripts/: clean-git-tree  cleanbib  mkopenclinfo  mkreport  mktree  output  parse_skelcl_instcount.py  parse_texcount.py
skepu/: CHANGES  DoxyMain  Doxyfile  README  results_overhead.txt
skepu/examples/: .gitignore  2dmapoverlap.cpp  2dmapoverlap.cu  Makefile.am  generate.cpp  generate.cu  map.cpp  map.cu  maparray.cpp  maparray.cu  mapoverlap.cpp  mapoverlap.cu  mapreduce.cu  reduce.cpp  reduce.cu  scan.cpp  scan.cu
skepu/examples/SPH_Fluid_Dynamics/: sph.cpp  sph.cu  sph.h
skepu/examples/columbic/: columSkepu.cpp  columSkepu.cu  opencl_datatype_src.cl
skepu/examples/dotproduct/: dotproduct.cpp  dotproduct.cu
skepu/examples/lu/: lufactor.cpp  lufactor.cu  lufactor.h
skepu/examples/mandelbrot/: mandelbrot.cpp  mandelbrot.cu
skepu/examples/matrix_vec_mult/dense_mv/: mv.cpp  mv.cu
skepu/examples/matrix_vec_mult/sparse_mv/: spmv.cpp  spmv.cu
skepu/examples/mse/: mse.cpp  mse.cu
skepu/examples/nbody/: nbody.cpp  nbody.cu  opencl_datatype_src.cl
skepu/examples/ppmcc/: ppmcc.cpp  ppmcc.cu
skepu/examples/psnr/: psnr.cpp  psnr.cu
skepu/examples/taylor_series/: tailor.cpp  tailor.cu
skepu/examples/tuning/: map.cu  maparray.cu  mapoverlap.cu  mapreduce.cu  reduce.cu
(+482 files in other folders)
